--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.20.0",
     "babel-loader": "^8.1.0",
     "cassandra-driver": "^4.6.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
